tests/ui/invalid_intopy_derive.stderr
error: cannot derive `IntoPyObject` for empty structs
 --> tests/ui/invalid_intopy_derive.rs:4:11
  |
4 | struct Foo();
  |           ^^

error: cannot derive `IntoPyObject` for empty structs
 --> tests/ui/invalid_intopy_derive.rs:8:13
  |
8 | struct Foo2 {}
  |             ^^

error: cannot derive `IntoPyObject` for empty enum
  --> tests/ui/invalid_intopy_derive.rs:12:6
   |
12 | enum EmptyEnum {}
   |      ^^^^^^^^^

error: cannot derive `IntoPyObject` for empty variants
  --> tests/ui/invalid_intopy_derive.rs:17:5
   |
17 |     EmptyTuple(),
   |     ^^^^^^^^^^

error: cannot derive `IntoPyObject` for empty variants
  --> tests/ui/invalid_intopy_derive.rs:24:5
   |
24 |     EmptyStruct {},
   |     ^^^^^^^^^^^

error: cannot derive `IntoPyObject` for empty structs
  --> tests/ui/invalid_intopy_derive.rs:31:27
   |
31 | struct EmptyTransparentTup();
   |                           ^^

error: cannot derive `IntoPyObject` for empty structs
  --> tests/ui/invalid_intopy_derive.rs:36:31
   |
36 | struct EmptyTransparentStruct {}
   |                               ^^

error: cannot derive `IntoPyObject` for empty variants
  --> tests/ui/invalid_intopy_derive.rs:42:5
   |
42 |     EmptyTuple(),
   |     ^^^^^^^^^^

error: cannot derive `IntoPyObject` for empty variants
  --> tests/ui/invalid_intopy_derive.rs:50:5
   |
50 |     EmptyStruct {},
   |     ^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_intopy_derive.rs:57:35
   |
57 | struct TransparentTupTooManyFields(String, String);
   |                                   ^^^^^^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_intopy_derive.rs:62:39
   |
62 |   struct TransparentStructTooManyFields {
   |  _______________________________________^
63 | |
64 | |     foo: String,
65 | |     bar: String,
66 | | }
   | |_^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_intopy_derive.rs:71:15
   |
71 |     EmptyTuple(String, String),
   |               ^^^^^^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_intopy_derive.rs:79:17
   |
79 |       EmptyStruct {
   |  _________________^
80 | |
81 | |         foo: String,
82 | |         bar: String,
83 | |     },
   | |_____^

error: expected one of: `transparent`, `from_item_all`, `annotation`, `crate`, `rename_all`
  --> tests/ui/invalid_intopy_derive.rs:88:8
   |
88 | #[pyo3(unknown = "should not work")]
   |        ^^^^^^^

error: #[derive(`IntoPyObject`)] is not supported for unions
  --> tests/ui/invalid_intopy_derive.rs:95:1
   |
95 | union Union {
   | ^^^^^

error: cannot derive `IntoPyObject` for empty variants
   --> tests/ui/invalid_intopy_derive.rs:102:5
    |
102 |     Unit,
    |     ^^^^

error: `item` and `attribute` are not permitted on tuple struct elements.
   --> tests/ui/invalid_intopy_derive.rs:107:30
    |
107 | struct TupleAttribute(#[pyo3(attribute)] String, usize);
    |                              ^^^^^^^^^

error: `item` and `attribute` are not permitted on tuple struct elements.
   --> tests/ui/invalid_intopy_derive.rs:111:25
    |
111 | struct TupleItem(#[pyo3(item)] String, usize);
    |                         ^^^^

error: `transparent` structs may not have `item` nor `attribute` for the inner field
   --> tests/ui/invalid_intopy_derive.rs:123:12
    |
123 |     #[pyo3(item)]
    |            ^^^^

error: `into_py_with` is not permitted on `transparent` structs or variants
   --> tests/ui/invalid_intopy_derive.rs:131:12
    |
131 |     #[pyo3(into_py_with = into)]
    |            ^^^^^^^^^^^^

error: `into_py_with` is not permitted on `transparent` structs or variants
   --> tests/ui/invalid_intopy_derive.rs:139:12
    |
139 |     #[pyo3(into_py_with = into_ref)]
    |            ^^^^^^^^^^^^

error: `into_py_with` is not permitted on `transparent` structs
   --> tests/ui/invalid_intopy_derive.rs:146:42
    |
146 | struct TupleTransparentIntoPyWith(#[pyo3(into_py_with = into)] String);
    |                                          ^^^^^^^^^^^^

error: `into_py_with` is not permitted on `transparent` structs
   --> tests/ui/invalid_intopy_derive.rs:151:29
    |
151 |     TransparentTuple(#[pyo3(into_py_with = into)] usize),
    |                             ^^^^^^^^^^^^

error: `into_py_with` is not permitted on `transparent` structs or variants
   --> tests/ui/invalid_intopy_derive.rs:159:16
    |
159 |         #[pyo3(into_py_with = into)]
    |                ^^^^^^^^^^^^

error: `rename_all` is not permitted on `transparent` structs and variants
   --> tests/ui/invalid_intopy_derive.rs:166:21
    |
166 | #[pyo3(transparent, rename_all = "camelCase")]
    |                     ^^^^^^^^^^

error: `rename_all` is useless on tuple structs and variants.
   --> tests/ui/invalid_intopy_derive.rs:173:8
    |
173 | #[pyo3(rename_all = "camelCase")]
    |        ^^^^^^^^^^

error: `rename_all` is not permitted on `transparent` structs and variants
   --> tests/ui/invalid_intopy_derive.rs:179:12
    |
179 |     #[pyo3(rename_all = "camelCase")]
    |            ^^^^^^^^^^

error: `rename_all` is useless on tuple structs and variants.
   --> tests/ui/invalid_intopy_derive.rs:187:12
    |
187 |     #[pyo3(rename_all = "camelCase")]
    |            ^^^^^^^^^^

error: `rename_all` is not supported at top level for enums
   --> tests/ui/invalid_intopy_derive.rs:193:8
    |
193 | #[pyo3(rename_all = "camelCase")]
    |        ^^^^^^^^^^

error: aborting due to 29 previous errors
